# swagger.json
@@ -3311,7 +3311,10 @@
           "serial_number": {
             "type": "string"
           },
-          "sku_barcode": {
+          "sku": {
+            "type": "string"
+          },
+          "barcode": {
             "type": "string"
           },
           "created_at": {
@@ -3324,7 +3327,7 @@
           }
         },
         "required": [
-          "sku_barcode"
+          "sku"
         ]
       },
       "CatalogArray": {
